@@ -757,6 +757,10 @@ void SDLInputState::setKeybind(int key, int binding_button, int bindings_list, s
 		binding_joy[binding_button] = key;
 }
 
+int SDLInputState::getKeyFromName(const std::string& key_name) {
+	return SDL_GetKeyFromName(key_name.c_str());
+}
+
 SDLInputState::~SDLInputState() {
 	if (joy)
 		SDL_JoystickClose(joy);
